--- a/Web/Views/Categoria/Index.cshtml
+++ b/Web/Views/Categoria/Index.cshtml
@@ -150,7 +150,7 @@
 
                  if (option == 'D') {
                      Swal.fire('Éxito!',
-                         'El registro fue borrado correctamente.',
+                         'El registro fue desactivado correctamente.',
                          'success');
                 }
 
