--- a/Web/Views/Cancion/Create.cshtml
+++ b/Web/Views/Cancion/Create.cshtml
@@ -28,11 +28,15 @@
 
     <div class="card card-default mt-3">
         <div class="card-body p-3 col-md-12">
+            <div class="card-header text-danger text-left border-bottom-0">
+                <p>* Campos requeridos</p>
+            </div>
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
+                        <strong class="text-danger">*</strong>
                         @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label" })
                         <div class="col-md-8">
                             @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
