--- a/Web/Views/Categoria/Create.cshtml
+++ b/Web/Views/Categoria/Create.cshtml
@@ -30,10 +30,14 @@
 <center>
         <div class="card card-default mt-3 col-md-8">
             <div class="card-body p-3 col-md-12">
+                <div class="card-header text-danger text-left border-bottom-0">
+                    <p>* Campos requeridos</p>
+                </div>
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="row">
+                <div class="row text-left">
                     <div class="col-md-12">
-                        <div class="form-group text-left">
+                        <div class="form-group ">
+                            <strong class="text-danger">*</strong>
                             @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label" })
                             @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
