--- a/Web/Views/Categoria/Edit.cshtml
+++ b/Web/Views/Categoria/Edit.cshtml
@@ -29,15 +29,19 @@
     <center>
         <div class="card card-default mt-3 col-md-8">
             <div class="card-body p-3 col-md-12">
+                <div class="card-header text-danger text-left border-bottom-0">
+                    <p>* Campos requeridos</p>
+                </div>
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="row">
+                <div class="row text-left">
                     <div class="col-md-12">
-                        <div class="form-group text-left">
+                        <div class="form-group ">
+                            <strong class="text-danger">*</strong>
                             @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label" })
                             @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                         </div>
-                        <div class="form-group text-left">
+                        <div class="form-group">
                             <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
                                 @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
                                 <label class="custom-control-label" for="customSwitch3">Estado</label>
