--- a/Web/Views/Usuario/Details.cshtml
+++ b/Web/Views/Usuario/Details.cshtml
@@ -35,7 +35,7 @@
                     @if (Model.Foto != null)
                     {
                         <div class="col-md-8">
-                            <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(Model.Foto)" id="ImagenUsuario" style="height:100%; width: auto" />
+                            <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(Model.Foto)" id="ImagenUsuario" style="max-height: 300px; width: auto" />
                         </div>
                     }
                     else
