--- a/Web/Views/Usuario/Index.cshtml
+++ b/Web/Views/Usuario/Index.cshtml
@@ -29,16 +29,16 @@
     </div><!-- /.container-fluid -->
 </div>
 
-@{ 
-        if (UsuarioLogueado != null && UsuarioLogueado.Rol.Id == 1)
-        {
-            <p>
-                <a class="btn btn-primary" href="@Url.Action("Create", "Usuario")">
-                    <i class="fa fa-plus"></i>
-                    Nuevo Usuario
-                </a>
-            </p>
-        }
+@{
+    if (UsuarioLogueado != null && UsuarioLogueado.Rol.Id == 1)
+    {
+        <p>
+            <a class="btn btn-primary" href="@Url.Action("Create", "Usuario")">
+                <i class="fa fa-plus"></i>
+                Nuevo Usuario
+            </a>
+        </p>
+    }
 }
 
 
@@ -80,7 +80,7 @@
                                         <td>
                                             @if (item.Foto != null)
                                             {
-                                                <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(item.Foto)" class="img-circle elevation-2" alt="User Image" style="height: 34px; width:auto"> }
+                                                <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(item.Foto)" class="img-circle elevation-2" alt="User Image" style="height: 34px; width:34px"> }
                                             else
                                             {
                                                 <img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">
@@ -92,7 +92,7 @@
 
                                         <td>
                                             @Html.DisplayFor(modelItem => item.NombreCompleto)
-                                            @if (UsuarioLogueado !=null && item.Id == UsuarioLogueado.Id)
+                                            @if (UsuarioLogueado != null && item.Id == UsuarioLogueado.Id)
                                             {
                                                 <span class="right badge badge-primary ml-5">Tú</span>
                                             }
@@ -133,14 +133,13 @@
                                                 @{ if (UsuarioLogueado != null && UsuarioLogueado.Rol.Descripcion != "Integrante")
                                                     {
 
-                                                        if (item.Estado)
-                                                        {
-                                                            <li>
-                                                                <a id="botonEliminar" class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)" href="#">
-                                                                    <i class="fas fa-trash"></i>
-                                                                </a>
-                                                            </li>
-                                                        }
+
+                                                        <li>
+                                                            <a id="botonEliminar" class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)" href="#">
+                                                                <i class="fas fa-ban"></i>
+                                                            </a>
+                                                        </li>
+
 
 
                                                     } }
@@ -175,7 +174,7 @@
 
 @section scripts {
     @Scripts.Render("~/bundles/datatable")
-    <script src="~/Content/plugins/sweetalert2/sweetalert2.min.js"></script>
+
 
     <script>
     // Habilita los tooltips
@@ -300,7 +299,7 @@
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
-                confirmButtonText: 'Sí, bórralo!',
+                confirmButtonText: 'Sí, desactívalo!',
                 cancelButtonText: 'Cancelar'
             }).then((result) => {
                 if (result.isConfirmed) {
