--- a/Web/Views/Recuperacion/Recovery.cshtml
+++ b/Web/Views/Recuperacion/Recovery.cshtml
@@ -40,9 +40,10 @@
                             </div>
                             <div class="formDiv" style="transition-delay: 0.4s">
                                 @Html.HiddenFor(model => model.token)
-                                <p>INGRESE SU NUEVA CONTRASEÑA</p>
+                                <p>INGRESE SU NUEVA CONTRASEÑA<a style="padding-left:40%" data-toggle="tooltip" data-placement="top" title="Presione aquí para mostrar u ocultar la contraseña" id="ojosMostrar"><img style="color:white" src="~/Content/dist/img/ojo.png" height="15px" width="15px" /></a></p> 
                                 <!--<input type="text" />-->
                                 @Html.PasswordFor(model => model.NewClave, new { htmlAttributes = new { @class = "disennoinputs" } })
+                            
                                 <!--<input type="text" id="claveNueva"/>-->
                                 @Html.ValidationMessageFor(model => model.NewClave, "", new { @class = "text-danger" })
                             </div>
@@ -55,7 +56,7 @@
                             </div>
                             <div class="formDiv" style="transition-delay: 0.6s">
                                  <div style="text-align:center">
-                                        <button id="botonAceptar" class="btn-primary" type="submit" >
+                                        <button id="botonAceptar" class="acceptBtn" type="submit" >
                                             Guardar cambio
                                         </button>
                                  </div>
@@ -82,10 +83,9 @@
     })
 
     $(document).ready(function () {
-        //document.getElementById('botonAceptar').disabled = true;
-        //document.getElementById('botonAceptar').style= "background-color: white; color: gray"
         $("#botonAceptar").attr('disabled', 'disabled');
-        $("#botonAceptar").addClass('btn-primary-disabled');
+        //$("#botonAceptar").addClass('btn-primary-disabled');
+        $("#botonAceptar").addClass('acceptBtnDisabled');
     });
 
     $("#NewClave").on("keyup paste", function () {
@@ -105,6 +105,15 @@
     //$("#claveNuevaConfirm").keyup(function (e) {
     //    validarClave();
     //});
+
+    $('#ojosMostrar').on('click', function () {
+        $('#NewClave').attr('type', function (index, attr) {
+            return attr == 'text' ? 'password' : 'text';
+        })
+        $('#ConfirmNewClave').attr('type', function (index, attr) {
+            return attr == 'text' ? 'password' : 'text';
+        })
+    })
 
     function validarClave() {
 
@@ -182,14 +191,18 @@
         if (especiales1 == false && especiales2 == false || especiales1 == true && especiales2 == false || especiales1 == false && especiales2 == true) {
             simbolosValidada = false;
         }
-        debugger;
+        //debugger;
         //$("#botonAceptar").prop('disabled', claveValidada);
         if (longitudValidada == true && minusculasValidada == true && mayusculasValidada == true && numerosValidada == true && simbolosValidada == true) {
             $("#botonAceptar").removeAttr('disabled');
-            $("#botonAceptar").removeClass('btn-primary-disabled');
+            //$("#botonAceptar").removeClass('btn-primary-disabled');
+            $("#botonAceptar").removeClass('acceptBtnDisabled');
+            //$("#botonAceptar").addClass('acceptBtn:hover');
         } else {
             $("#botonAceptar").attr('disabled', 'disabled');
-            $("#botonAceptar").addClass('btn-primary-disabled');
+            //$("#botonAceptar").addClass('btn-primary-disabled');
+            $("#botonAceptar").addClass('acceptBtnDisabled');
+            //$("#botonAceptar").removeClass('acceptBtn:hover');
         }
     }
 
