--- a/Web/Views/Usuario/ChangePassNewUser.cshtml
+++ b/Web/Views/Usuario/ChangePassNewUser.cshtml
@@ -11,6 +11,7 @@
 
 @using (Html.BeginForm("CambioClave", "Usuario", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
+    @Html.AntiForgeryToken()
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -30,15 +31,16 @@
         <div id="container">
             <div id="inviteContainer">
                 <div class="acceptContainer">
-                    <form>
+                    <form action="@Url.Content("~/Usuario/CambioClave")" method="post">
                         <h1>Cambio de contraseña</h1>
                         <div class="formContainer">
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="formDiv" style="transition-delay: 0.2s">
                                 <p style="margin-bottom:15px; text-align:justify">Recuerde que la contraseña debe coincidir en ambos campos. Además, debe contener al menos una letra minúscula y mayúscula, al menos un número y al menos un caracter especial.</p>
                             </div>
                             <div class="formDiv" style="transition-delay: 0.4s">
                                 @Html.HiddenFor(model => model.IdUsuario)
-                                <p>INGRESE SU NUEVA CONTRASEÑA</p>
+                                <p>INGRESE SU NUEVA CONTRASEÑA<a style="padding-left:40%" data-toggle="tooltip" data-placement="top" title="Presione aquí para mostrar u ocultar la contraseña" id="ojosMostrar"><img style="color:white" src="~/Content/dist/img/ojo.png" height="15px" width="15px" /></a></p>
                                 <!--<input type="text" />-->
                                 @Html.PasswordFor(model => model.NewClave, new { htmlAttributes = new { @class = "disennoinputs" } })
                                 @Html.ValidationMessageFor(model => model.NewClave, "", new { @class = "text-danger" })
@@ -51,13 +53,13 @@
                             </div>
                             <div class="formDiv" style="transition-delay: 0.6s">
                                 <!--
-    <button class="acceptBtn" type="submit">Ingresar</button><span class="register">Necesita una cuenta?<a href="#">Registrar</a></span>
-    -->
+        <button class="acceptBtn" type="submit">Ingresar</button><span class="register">Necesita una cuenta?<a href="#">Registrar</a></span>
+        -->
                                 <!--<button class="acceptBtn" type="submit">
-                                    Guardar cambio
-                                </button>-->
+            Guardar cambio
+        </button>-->
                                 <div style="text-align:center">
-                                    <button id="botonAceptar" class="btn-primary" type="submit">
+                                    <button id="botonAceptar" class="acceptBtn" type="submit">
                                         Guardar cambio
                                     </button>
                                 </div>
@@ -82,10 +84,9 @@
     })
 
     $(document).ready(function () {
-        //document.getElementById('botonAceptar').disabled = true;
-        //document.getElementById('botonAceptar').style= "background-color: white; color: gray"
         $("#botonAceptar").attr('disabled', 'disabled');
-        $("#botonAceptar").addClass('btn-primary-disabled');
+        //$("#botonAceptar").addClass('btn-primary-disabled');
+        $("#botonAceptar").addClass('acceptBtnDisabled');
     });
 
     $("#NewClave").on("keyup paste", function () {
@@ -105,6 +106,15 @@
     //$("#claveNuevaConfirm").keyup(function (e) {
     //    validarClave();
     //});
+
+    $('#ojosMostrar').on('click', function () {
+        $('#NewClave').attr('type', function (index, attr) {
+            return attr == 'text' ? 'password' : 'text';
+        })
+        $('#ConfirmNewClave').attr('type', function (index, attr) {
+            return attr == 'text' ? 'password' : 'text';
+        })
+    })
 
     function validarClave() {
 
@@ -182,16 +192,20 @@
         if (especiales1 == false && especiales2 == false || especiales1 == true && especiales2 == false || especiales1 == false && especiales2 == true) {
             simbolosValidada = false;
         }
-        debugger;
+        //debugger;
         //$("#botonAceptar").prop('disabled', claveValidada);
         if (longitudValidada == true && minusculasValidada == true && mayusculasValidada == true && numerosValidada == true && simbolosValidada == true) {
             $("#botonAceptar").removeAttr('disabled');
-            $("#botonAceptar").removeClass('btn-primary-disabled');
+            //$("#botonAceptar").removeClass('btn-primary-disabled');
+            $("#botonAceptar").removeClass('acceptBtnDisabled');
+            //$("#botonAceptar").addClass('acceptBtn:hover');
         } else {
             $("#botonAceptar").attr('disabled', 'disabled');
-            $("#botonAceptar").addClass('btn-primary-disabled');
+            //$("#botonAceptar").addClass('btn-primary-disabled');
+            $("#botonAceptar").addClass('acceptBtnDisabled');
+            //$("#botonAceptar").removeClass('acceptBtn:hover');
         }
     }
 
 </script>
-    @Scripts.Render("~/bundles/jqueryval")
+@Scripts.Render("~/bundles/jqueryval")
